removed MaxPermArgs @ RoboSpockTest.groovy